# notes-searcher

./: .gitignore  README.md  pyproject.toml
notes_searcher/: main.py
